--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnersearchresult.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnersearchresult.xhtml
@@ -1,98 +1,99 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <ui:composition xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:b="http://mogwai.sourceforge.net/layout"
-    xmlns:a4j="http://richfaces.org/a4j"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:rich="http://richfaces.org/rich" template="/template/powerstaff.xhtml">
-	<ui:define name="mainmenu">
-		<ui:include src="/include/mainmenu.xhtml"/>
-	</ui:define>
-	<ui:define name="contextmenu">
-		<ui:include src="/include/partner/partnermenu1.xhtml"/>
-	</ui:define>
-	<ui:define name="content">
-		<b:title title="Geschäftspartner - Suchergebnisse"/>
-		<f:subview id="partner_searchresult">
-			<b:gridBagLayout id="x" rows="p,10" cols="100,p">
-				<b:cell y="1" x="1">
-					<h:outputText styleClass="title" value="Partner Suchergebnisse"/>
-				</b:cell>
-				
-				<b:cell y="1" x="2">
-					<a4j:status>				
-						<f:facet name="start">
-							<b:image source="images/rotate2.gif" width="20" height="20"/>
-						</f:facet>
-					</a4j:status>
-				</b:cell>
-			</b:gridBagLayout>
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:b="http://mogwai.sourceforge.net/layout"
+                xmlns:a4j="http://richfaces.org/a4j"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:rich="http://richfaces.org/rich" template="/template/powerstaff.xhtml">
+    <ui:define name="mainmenu">
+        <ui:include src="/include/mainmenu.xhtml"/>
+    </ui:define>
+    <ui:define name="contextmenu">
+        <ui:include src="/include/partner/partnermenu1.xhtml"/>
+    </ui:define>
+    <ui:define name="content">
+        <b:title title="Geschäftspartner - Suchergebnisse"/>
+        <f:subview id="partner_searchresult">
+            <b:gridBagLayout id="x" rows="p,10" cols="100,p">
+                <b:cell y="1" x="1">
+                    <h:outputText styleClass="title" value="Partner Suchergebnisse"/>
+                </b:cell>
 
-			<b:gridBagLayout cols="810" rows="30,10,1,p">
-				<b:cell x="1" y="1">
-					<b:titledBox label="Menu">
-						<b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
-							rows="20">
-							<b:cell x="1" y="1">
-								<b:commandLink title="Zurück" action="#{partnerBackingBean.commandBack}">
-									<b:image source="/images/back.gif" />
-									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
-								</b:commandLink>
-							</b:cell>
-						</b:gridBagLayout>
-					</b:titledBox>
-				</b:cell>
-				
-				<b:cell x="1" y="3">
-					<ui:include src="/include/messages.xhtml"/>
-				</b:cell>
+                <b:cell y="1" x="2">
+                    <a4j:status>
+                        <f:facet name="start">
+                            <b:image source="images/rotate2.gif" width="20" height="20"/>
+                        </f:facet>
+                    </a4j:status>
+                </b:cell>
+            </b:gridBagLayout>
 
-				<b:cell x="1" y="4">
-					<b:table var="row" value="#{partnerBackingBean.data.searchResult}" cols="20,150,150,130,100,260">
-						<h:column>
-							<f:facet name="header">
-							</f:facet>
-							<b:commandLink title="Datensatz anzeigen" action="#{partnerBackingBean.commandSelectSearchResult}">
-								<b:image source="/images/select.gif" />
-								<a4j:support event="onclick"/>
-							</b:commandLink>
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText value="Name1"/>
-							</f:facet>
-							<h:outputText value="#{row.name1}"/>
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText value="Name2"/>
-							</f:facet>
-							<h:outputText value="#{row.name2}"/>
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText value="Firma"/>
-							</f:facet>
-							<h:outputText value="#{row.company}"/>
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText value="Stadt"/>
-							</f:facet>
-							<h:outputText value="#{row.city}"/>
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText value="Kommentar"/>
-							</f:facet>
-							<h:outputText value="#{row.comments}"/>
-						</h:column>
-					</b:table>
-				</b:cell>
-		
-			</b:gridBagLayout>
-			
-		</f:subview>			
-	</ui:define>
+            <b:gridBagLayout cols="810" rows="30,10,1,p">
+                <b:cell x="1" y="1">
+                    <b:titledBox label="Menu">
+                        <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
+                                         rows="20">
+                            <b:cell x="1" y="1">
+                                <b:commandLink title="Zurück" action="#{partnerBackingBean.commandBack}">
+                                    <b:image source="/images/back.gif"/>
+                                    <a4j:support eventsQueue="powerstaff" event="onclick"
+                                                 reRender="#{partnerBackingBean.data.changedComponents}"/>
+                                </b:commandLink>
+                            </b:cell>
+                        </b:gridBagLayout>
+                    </b:titledBox>
+                </b:cell>
+
+                <b:cell x="1" y="3">
+                    <ui:include src="/include/messages.xhtml"/>
+                </b:cell>
+
+                <b:cell x="1" y="4">
+                    <b:table var="row" value="#{partnerBackingBean.data.searchResult}" cols="20,150,150,130,100,260">
+                        <h:column>
+                            <f:facet name="header">
+                            </f:facet>
+                            <b:commandLink title="Datensatz anzeigen"
+                                           action="#{partnerBackingBean.commandSelectSearchResult}">
+                                <b:image source="/images/select.gif"/>
+                                <a4j:support eventsQueue="powerstaff" event="onclick"/>
+                            </b:commandLink>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="Name1"/>
+                            </f:facet>
+                            <h:outputText value="#{row.name1}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="Name2"/>
+                            </f:facet>
+                            <h:outputText value="#{row.name2}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="Firma"/>
+                            </f:facet>
+                            <h:outputText value="#{row.company}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="Stadt"/>
+                            </f:facet>
+                            <h:outputText value="#{row.city}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="Kommentar"/>
+                            </f:facet>
+                            <h:outputText value="#{row.comments}"/>
+                        </h:column>
+                    </b:table>
+                </b:cell>
+
+            </b:gridBagLayout>
+
+        </f:subview>
+    </ui:define>
 </ui:composition>	
